src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__add_author_ui__add_author_ui_tests__tests__snapshot_tests__add_author_already_in_library_ui_renders.snap
---
source: src/ui/readarr_ui/library/add_author_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                     ╭─────────────────────────────────────────────────────  Add Author  ─────────────────────────────────────────────────────╮                      
                     │Test Author                                                                                                             │                      
                     ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯                      
                     ╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                      
                     │   ✔    Name                       Type           Status         Rating     Genres                                      │                      
                     │=> ✔    Test Author                Person         Continuing     4.5        science fiction                             │                      
                     │        Unadded Author             Group          Ended                     fantasy, horror                             │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                       ╭───────────────  Error  ───────────────╮                                        │                      
                     │                                       │This author is already in your library │                                        │                      
                     │                                       │                                       │                                        │                      
                     │                                       ╰───────────────────────────────────────╯                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
