src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__add_author_ui__add_author_ui_tests__tests__snapshot_tests__add_author_modal_active_AddAuthorSelectMonitor.snap
---
source: src/ui/readarr_ui/library/add_author_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                            ╭────────────────────────────────  Add - Test Author (American novelist)  ────────────────────────────────╮                              
                     ╭──────│                                                                                                         │───────╮                      
                     │Test A│                                                                                                         │       │                      
                     ╰──────│                                                                                                         │───────╯                      
                     ╭──────│                                                                                                         │───────╮                      
                     │   ✔  │                                                                                                         │       │                      
                     │=> ✔  │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                  ╭─────────────────────────────────────────────────╮    │       │                      
                     │      │                                     Root Folder: │/nfs                                           ▼ │    │       │                      
                     │      │                                                  ╰─────────────────────────────────────────────────╯    │       │                      
                     │      │                                     ╭───────────────────────────────╮──────────────────────────────╮    │       │                      
                     │      │                                     │All Books                      │                            ▼ │    │       │                      
                     │      │                                     │Future Books                   │──────────────────────────────╯    │       │                      
                     │      │                                     │Missing Books                  │──────────────────────────────╮    │       │                      
                     │      │                               Monito│Existing Books                 │                            ▼ │    │       │                      
                     │      │                                     │First Book                     │──────────────────────────────╯    │       │                      
                     │      │                                     │Latest Book                    │──────────────────────────────╮    │       │                      
                     │      │                                 Qual│None                           │                            ▼ │    │       │                      
                     │      │                                     │Unknown                        │──────────────────────────────╯    │       │                      
                     │      │                                     │                               │──────────────────────────────╮    │       │                      
                     │      │                                Metad│                               │                            ▼ │    │       │                      
                     │      │                                     │                               │──────────────────────────────╯    │       │                      
                     │      │                                     │                               │──────────────────────────────╮    │       │                      
                     │      │                                     │                               │                              │    │       │                      
                     │      │                                     ╰───────────────────────────────╯──────────────────────────────╯    │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│       │                      
                     │      ││                        Add                        ││                      Cancel                      ││       │                      
                     ╰──────│╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│───────╯                      
                            ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯
