src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__add_author_ui__add_author_ui_tests__tests__snapshot_tests__add_author_modal_active_AddAuthorSelectMonitorNewItems.snap
---
source: src/ui/readarr_ui/library/add_author_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                            ╭────────────────────────────────  Add - Test Author (American novelist)  ────────────────────────────────╮                              
                     ╭──────│                                                                                                         │───────╮                      
                     │Test A│                                                                                                         │       │                      
                     ╰──────│                                                                                                         │───────╯                      
                     ╭──────│                                                                                                         │───────╮                      
                     │   ✔  │                                                                                                         │       │                      
                     │=> ✔  │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                  ╭─────────────────────────────────────────────────╮    │       │                      
                     │      │                                     Root Folder: │/nfs                                           ▼ │    │       │                      
                     │      │                                                  ╰─────────────────────────────────────────────────╯    │       │                      
                     │      │                                     ╭───────────────────────────────╮──────────────────────────────╮    │       │                      
                     │      │                                     │All Books                      │                            ▼ │    │       │                      
                     │      │                                     │No New Books                   │──────────────────────────────╯    │       │                      
                     │      │                                     │New Books                      │──────────────────────────────╮    │       │                      
                     │      │                               Monito│                               │                            ▼ │    │       │                      
                     │      │                                     │                               │──────────────────────────────╯    │       │                      
                     │      │                                     │                               │──────────────────────────────╮    │       │                      
                     │      │                                 Qual│                               │                            ▼ │    │       │                      
                     │      │                                     │                               │──────────────────────────────╯    │       │                      
                     │      │                                     │                               │──────────────────────────────╮    │       │                      
                     │      │                                Metad│                               │                            ▼ │    │       │                      
                     │      │                                     │                               │──────────────────────────────╯    │       │                      
                     │      │                                     │                               │──────────────────────────────╮    │       │                      
                     │      │                                     │                               │                              │    │       │                      
                     │      │                                     ╰───────────────────────────────╯──────────────────────────────╯    │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│       │                      
                     │      ││                        Add                        ││                      Cancel                      ││       │                      
                     ╰──────│╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│───────╯                      
                            ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯
